fix: explicit CORS configuration allowing vercel frontend requests